@@ -2,6 +2,7 @@ Version 0.5:
 
 	* Support XIMP as well as Matchpointing
 	* Support for individuals (currently only in cmd line)
+	* Support for imping against par (currently only in cmd line)
 	* Correct masterpoint awards
 
 Version 0.4:
